--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuccafi</title>
+    <meta name="title" content="YUCCA.FI" />
+    <meta
+      name="description"
+      content="A hybrid DeFi platform combining arbitrage trading bots and liquidity staking protocols in Botanix Labs"
+    />
     <!-- pretendard -->
     <link
       rel="stylesheet"
