--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuccafi</title>
     <meta name="title" content="YUCCA.FI" />
+    <meta name="keywords" content="Botanix, yuccafi, blockwaveLabs" />
     <meta
       name="description"
       content="A hybrid DeFi platform combining arbitrage trading bots and liquidity staking protocols in Botanix Labs"
