--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuccafi</title>
-    <meta name="title" content="YUCCA.FI" />
+    <meta name="title" content="yucca.fi" />
     <meta name="keywords" content="Botanix, yuccafi, blockwaveLabs" />
     <meta
       name="description"
       content="A hybrid DeFi platform combining arbitrage trading bots and liquidity staking protocols in Botanix Labs"
     />
+
+    <meta name="twitter:title" content="yucca.fi" />
+    <meta
+      name="twitter:description"
+      content="A hybrid DeFi platform combining arbitrage trading bots and liquidity staking protocols in Botanix Labs"
+    />
+    <meta name="twitter:image" content="yucca.jpg" />
+
     <!-- pretendard -->
     <link
       rel="stylesheet"
