--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       name="twitter:description"
       content="A hybrid DeFi platform combining arbitrage trading bots and liquidity staking protocols in Botanix Labs"
     />
-    <meta name="twitter:image" content="yucca.jpg" />
+    <meta name="twitter:image" content="/yucca.jpg" />
 
     <!-- pretendard -->
     <link
