feat: meta twitter

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="description"
       content="A hybrid DeFi platform combining arbitrage trading bots and liquidity staking protocols in Botanix Labs"
     />
-
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="yucca.fi" />
     <meta
       name="twitter:description"
